--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "bugs": {
     "url": "https://github.com/Jeyson-M-C/catalogo-lml-react/issues"
   },
-  "homepage": "https://Jeyson-M-C.github.io/catalogo-lml-react",
+  "homepage": ".",
   "dependencies": {
     "axios": "^1.7.9",
     "react-dom": "^19.0.0",
