--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": ".",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "axios": "^1.7.9",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.5",
